# test

./: .env.example  Makefile  README.md  config.yaml  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
analytics/: Dockerfile  __init__.py  api.py  models.py  options.py  risk.py  tech.py  timeseries.py
common/: __init__.py  config.py  db.py  io.py
dashboard/: Dockerfile  __init__.py  app.py
dashboard/components/: api_client.py  charts.py  metrics.py
ingestor/: Dockerfile  __init__.py  crypto_binance.py  equities_yf.py  main.py  options_yf.py
scheduler/: Dockerfile  __init__.py  jobs.py  main.py
scripts/: start.sh  stop.sh
tests/: __init__.py  test_analytics.py  test_integration.py
