[tool.poetry]
name = "quant-dashboard"
version = "0.1.0"
description = "MVP Quant Dashboard with Binance + yfinance + comprehensive financial math"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
streamlit = "^1.28.1"
pandas = "^2.1.3"
numpy = "^1.25.2"
duckdb = "^0.9.2"
pyarrow = "^14.0.1"
websockets = "^12.0"
aiohttp = "^3.9.1"
yfinance = "^0.2.28"
scipy = "^1.11.4"
plotly = "^5.17.0"
apscheduler = "^3.10.4"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
asyncio-mqtt = "^0.16.1"
ccxt = "^4.1.77"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
